--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </main>
     <footer class="text-muted">
       <div class="container-fluid">
-        <p>Like a bun in the oven, our website is under construction.</p>
+        <p>Like a bun in the oven, our website is under construction :)</p>
       </div>
     </footer>
 
