--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <main role="main">
       
-        <div class="p-5 text-center bg-image rounded-3" style="
+        <div class="p-5 text-center bg-image" style="
           background-image: url('./pretzels1.jpg');
           height: 900px;
         ">
